[tool.poetry]
name = "mdtable"
version = "0.1.0"
description = ""
authors = ["Oskar Liew <oskar@liew.se>"]
# readme = "README.md"
# license = "BSD"
packages = [
  { include = "src" }
]
    
[tool.poetry.scripts]
mdtable = "src.main:app"

[tool.poetry.dependencies]
python = "^3.10"
tabulate = "^0.9.0"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
typer = "^0.12.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
